[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["gui"]
description = "A library for validating forms, and allowing validation logic to be shared."
edition = "2018"
keywords = ["validation", "forms"]
license = "MIT"
name = "form-validation"
readme = "README.md"
repository = "https://github.com/kellpossible/form-validation"
version = "0.1.1"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
uuid = { version = "0.8", features = ["v4"] }