[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["gui"]
description = "A library for validating forms, and allowing validation logic to be shared."
edition = "2018"
keywords = ["validation", "forms"]
license = "MIT"
name = "form-validation"
readme = "README.md"
repository = "https://github.com/kellpossible/form-validation"
version = "0.1.2"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
wasm-bindgen = { version = "0.2", optional = true }
stdweb = { version = "0.4", optional = true }
# TODO: make async support optional
futures = "0.3"

[features]
default = []
wasm-bindgen-support = ["wasm-bindgen", "uuid/wasm-bindgen"]
stdweb-support = ["stdweb", "uuid/stdweb"]